--- a/register.html
+++ b/register.html
@@ -3,19 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>Register</title>
 </head>
 <body>
-    <h2>Login</h2>
-    <form action="login.php" method="post">
+    <h2>Register</h2>
+    <form id="registerForm" action="register.php" method="post">
         <label for="id">ID:</label><br>
         <input type="text" id="id" name="id"><br>
         <label for="password">Password:</label><br>
         <input type="password" id="password" name="password"><br><br>
-        <input type="submit" value="Submit">
+        <input type="submit" value="Register">
     </form>
     <br>
-    <p>아직 회원이 아니세요? <a href="register.html">회원가입</a>을 클릭하여 회원가입하세요.</p>
+    <p>이미 회원이신가요? <a href="index.html">로그인</a>을 클릭하여 로그인하세요.</p>
+
 </body>
 </html>
 
