--- a/index.html
+++ b/index.html
@@ -1,21 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
-</head>
+<html>
 <body>
-    <h2>Login</h2>
-    <form action="login.php" method="post">
-        <label for="id">ID:</label><br>
-        <input type="text" id="id" name="id"><br>
-        <label for="password">Password:</label><br>
-        <input type="password" id="password" name="password"><br><br>
-        <input type="submit" value="Submit">
-    </form>
-    <br>
-    <p>아직 회원이 아니세요? <a href="register.html">회원가입</a>을 클릭하여 회원가입하세요.</p>
+
+<h1>Project Test HTML</h1>
+
+<p>First Try</p>
+
 </body>
 </html>
-
