--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     </form>
     <br>
     <p>아직 회원이 아니세요? <a href="register.html">회원가입</a>을 클릭하여 회원가입하세요.</p>
+    <br>
+    <p>강사는 이쪽에서 로그인해주세요 <a href="instructorlogin.html">강사 로그인</a></p>
 </body>
 </html>
 
