some files changed

--- a/index.html
+++ b/index.html
@@ -48,63 +48,63 @@
                 <ul>
                     <li>
                         <a href="#">
-                            <div><img src="https://icons-for-free.com/iff/png/256/artificial+intelligence+automaton+brain+electronics+robotics-1320085943700946588.png" width="50", height="40":></div>
+                            <div><img src="images/AI.png" width="50", height="40":></div>
                             <span>AI</span>
                         </a>
                     </li>
                     
                     <li>
                         <a href="#">
-                            <div><img src="https://icons-for-free.com/iff/png/256/market+data+monitor+research+screen+seo+statistics+icon-1320137026372517416.png" width="50", height="40":></div>
+                            <div><img src="images/bigdata.png" width="50", height="40":></div>
                             <span>빅데이터</span>
                         </a>
                     </li>
                     <li>
                         <a href="#">
-                            <div><img src="https://icons-for-free.com/iff/png/256/game+controller+video+game+icon-1320087273514764593.png" width="50", height="40":></div>
+                            <div><img src="images/game.png" width="50", height="40":></div>
                             <span>게임</span>
                         </a>
                     </li>
                     <li>
                         <a href="#">
-                            <div><img src="https://icons-for-free.com/iff/png/256/Smartphone-1320568045663062804.png" width="50", height="40":></div>
+                            <div><img src="images/mobile.png" width="50", height="40":></div>
                             <span>모바일</span>
                         </a>
                     </li>
                     <li>
                         <a href="#">
-                            <div><img src="https://icons-for-free.com/iff/png/256/page+web+webiste+window+icon-1320168050944407268.png" width="50", height="40":></div>
+                            <div><img src="images/uxui.png" width="50", height="40":></div>
                             <span>UX UI</span>
                         </a>
                     </li>
                     <li>
                         <a href="#">
-                            <div><img src="https://icons-for-free.com/iff/png/256/security+shield+icon-1320087277307273907.png" width="50", height="40":></div>
+                            <div><img src="images/security.png" width="50", height="40":></div>
                             <span>보안</span>
                         </a>
                     </li>
                     <li>
                         <a href="#">
-                            <div><img src="https://icons-for-free.com/iff/png/256/microsoft+office-1330289845399773754.png" width="50", height="40":></div>
+                            <div><img src="images/ms.png" width="50", height="40":></div>
                             <span>MSoffice</span>
                         </a>
                     </li>
                     <li>
                         <a href="#">
-                            <div><img src="https://icons-for-free.com/iff/png/256/coding+developer+development+man+programming+screen+icon-1320196664168797782.png" width="50", height="40":></div>
+                            <div><img src="images/cote.png" width="50", height="40":></div>
                             <span>코딩</span>
                             <span>테스트</span>
                         </a>
                     </li>
                     <li>
                         <a href="#">
-                            <div><img src="https://icons-for-free.com/iff/png/256/cloud+sell+shop+shopping+icon-1320183454322307055.png" width="50", height="40":></div>
+                            <div><img src="images/cloud.png" width="50", height="40":></div>
                             <span>클라우드</span>
                         </a>
                     </li>
                     <li>
                         <a href="#">
-                            <div><img src="https://icons-for-free.com/iff/png/256/fiber+new+24px-131985189960371986.png" width="50", height="40":></div>
+                            <div><img src="images/new.png" width="50", height="40":></div>
                             <span>신규강의</span>
                         </a>
                     </li>
