--- a/instructorregister.html
+++ b/instructorregister.html
@@ -18,12 +18,11 @@
             <!--header-->    
             <div class="header">
                 <div id="top">
-                    <a id="h-logo" href="index.html"><img src="images/logo.png" alt="logo"></a>
+                    <a id="h-logo" href="index.php"><img src="images/logo.png" alt="logo"></a>
                     <ul>
                         <li><a href="login.html">회원로그인  |</a></li>
                         <li><a href="instructorlogin.html">강사로그인</a></li>
                         <li><a href="register.html">회원가입</a></li>
-                        <li><a href="mypage.php">마이페이지</a></li>
                     </ul>
                 </div>
             </div>
