--- a/mycourse.html
+++ b/mycourse.html
@@ -18,12 +18,18 @@
             <!--header-->    
             <div class="header">
                 <div id="top">
-                    <a id="h-logo" href="index.html"><img src="images/logo.png" alt="logo"></a>
+                    <a id="h-logo" href="index.php"><img src="images/logo.png" alt="logo"></a>
                     <ul>
-                        <li><a href="login.html">회원로그인  |</a></li>
-                        <li><a href="instructorlogin.html">강사로그인</a></li>
-                        <li><a href="register.html">회원가입</a></li>
-                        <li><a href="mypage.php">마이페이지</a></li>
+                        <?php
+			            if (isset($_SESSION['uid'])) {
+                        	echo '<li><a href="logout.php">로그아웃</a></li>';
+				            echo '<li><a href="mypage.php">마이페이지</a></li>';
+			            } else {
+				            echo '<li><a href="instructorlogin.html">강사로그인</a></li>';
+				            echo '<li><a href="login.html">회원로그인</a></li>';
+				            echo '<li><a href="register.html">회원가입</a></li>';
+		        	    }
+			            ?>
                     </ul>
                 </div>
             </div>
