--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@ session_start();
                 <div id="top">
                     <a id="h-logo" href="index.html"><img src="images/logo.png" alt="logo"></a>
                     <ul>
-                        <li><a href="login.html">회원로그인  |</a></li>
-                        <li><a href="instructorlogin.html">강사로그인</a></li>
+                        <li><a href="login.html">강사로그인  |</a></li>
+                        <li><a href="instructorlogin.html">회원로그인</a></li>
                         <li><a href="register.html">회원가입</a></li>
                     </ul>
                 </div>
