--- a/login.html
+++ b/login.html
@@ -19,8 +19,8 @@
                 <div id="top">
                     <a id="h-logo" href="index.php"><img src="images/logo.png" alt="logo"></a>
                     <ul>
-                        <li><a href="login.html">회원로그인  |</a></li>
-                        <li><a href="instructorlogin.html">강사로그인</a></li>
+                        <li><a href="instructorlogin.html">강사로그인  |</a></li>
+                        <li><a href="login.html">회원로그인</a></li>
                         <li><a href="register.html">회원가입</a></li>
                     </ul>
                 </div>
